--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </datalist>
                     </div>
                     <div class="sec-1">
-                    <label class="titles">Type</label>
+                    <label class="titles">Type</label><br><br>
                     <div class="input2">
                         <input type='radio' id='roman' value='Roman'  name='tYpe'>
                       <label for='roman'>Roman</label>
