--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
                     <div class="sec-1"> 
                         <label class="titles">Title</label><label class="validation-error hide" id="fullNameValidationError">This field is required.</label>
-                        <input type="text" name="tiTle" id="tiTle">
+                        <input type="text" name="tiTle" id="tiTle" placeholder="Title">
                     </div class="sec-1">
                     <div>
                         <label class="titles">Author</label>
-                        <input type="text" name="auThor" id="auThor">
+                        <input type="text" name="auThor" id="auThor" placeholder="Author">
                     </div>
                     <div class="sec-1">
                         <label class="titles">Date</label>
@@ -34,11 +34,11 @@
                     </div>
                     <div class="sec-1">
                         <label class="titles">Price</label>
-                        <input type="number" name="prIce" id="prIce" min="10" max="600">
+                        <input type="number" name="prIce" id="prIce" min="10" max="600" placeholder="Price">
                     </div>
                     <div class="sec-1">
                     <label class="titles">Language</label>
-                        <input type="text" name="lanGuage" list="sliblio" id="lanGuage">
+                        <input type="text" name="lanGuage" list="sliblio" id="lanGuage" placeholder="Language">
                         <datalist id="sliblio">
                             <option value="Français">
                             <option value="Espagnol">
